# qtcsv

./: README.md
src/: CMakeLists.txt
src/include/: abstractdata.h  reader.h  stringdata.h  variantdata.h  writer.h
src/sources/: contentiterator.cpp  contentiterator.h  filechecker.h  reader.cpp  stringdata.cpp  symbols.h  variantdata.cpp  writer.cpp
